# poor_base

./: CMakeLists.txt  README.md  map.h  misc.h
include/: map.h  misc.h  misc_array.h  poor_array.h  poor_map.h  poor_stdio.h  poor_traits.h  traits.h
tests/: CMakeLists.txt  args_count.h  auto_arr_compile_ptr.c  auto_arr_compile_ptr2.c  gen_args_count.sh  poor_array_tests.c  poor_map_test.c  printf_format.c
